Update rollup config to hash the output files and generate the correct index.html. Bit of a hacky way to generate the hashes but hopefully it works well enough.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "svelte": "^3.44.2"
   },
   "dependencies": {
+    "@rollup/plugin-html": "^0.2.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-dev": "^2.0.1"
   }
