--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "svelte": "^3.44.2"
   },
   "dependencies": {
+    "@imask/svelte": "^6.2.2",
     "@rollup/plugin-html": "^0.2.4",
+    "imask": "^6.2.2",
     "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-dev": "^2.0.1"
+    "rollup-plugin-dev": "^2.0.1",
+    "svelte-spa-router": "^3.2.0"
   }
 }
